Updated text styles for each element
* **All odd numbered elements**: a light red/pink background, and a list of fonts containing `Verdana` and `DejaVu Sans` with `sans-serif` as a fallback
* **The second element**: blue text and a font size of 36px
* **The third element**: in addition to the styles for all odd numbered elements, add a font size of 24px
* **The fourth element**: a light green background, a font size of 24px, and bold

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,10 @@
 p {
     color: #000000;
     background-color: #ffc0cb;
-    font-variant: verdana;
+    font-family: "Verdana","DejaVu Sans", sans-serif;
 
+}
+
+#thirdline {
+    font-size: 24px;
 }
