--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,8 +1,6 @@
 p {
-    color: #000000;
     background-color: #ffc0cb;
-    font-family: "Verdana","DejaVu Sans", sans-serif;
-
+    font-family: Verdana,"DejaVu Sans", sans-serif;
 }
 
 #thirdline {
