Remove extra lines of code
Got rid of IDs for buttons and used the grouping selector for styles
that both elements share

--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,13 +1,15 @@
-.big-font {
+.yes-click, 
+.no-click 
+{
     font-size: 28px;
     font-family: Helvetica, "Times-New-Roman", sans-serif;
 }
 
-#yes-click {
+.yes-click {
     background-color: black; 
     color: white;
 }
 
-#no-click {
+.no-click {
     background-color: yellow;
 }
