--- a/margin-and-padding/01-margin-and-padding-1/style.css
+++ b/margin-and-padding/01-margin-and-padding-1/style.css
@@ -21,6 +21,6 @@ body {
   border: 3px solid brown;
   width: 200px;
   padding: 32px;
-  margin-left: 0px;
-  margin: right;
+  margin-left: 55%;
+  /*margin: right;  55%*/
 }
