Modified 8px border and 8px padding for button

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -5,20 +5,23 @@ body {
 
 .card {
   width: 400px;
+  padding: 8px;
   background: #fff;
   margin: 16px auto;
+  font-size: 16px;
 }
 
 .title {
   background: #e3f4ff;
 }
 
-.content {
+.content {  
   background: #e3f4ff;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 8px;
 }
 
 button {
