--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,30 +1,39 @@
 body {
   background: #eee;
-  font-family: sans-serif;
+  font-family: sans-serif; 
 }
 
 .card {
   width: 400px;
   padding: 8px;
   background: #fff;
-  margin: 16px auto;
-  font-size: 16px;
+  /*margin: 8px auto;*/  
 }
 
 .title {
+  font-size: 16px;
   background: #e3f4ff;
+  padding: 8px;
 }
 
 .content {  
   background: #e3f4ff;
+  margin: 8px auto;
+  padding: 16px 8px;
+  /*padding-bottom: 16px;
+  padding-right: 8px;
+  padding-left: 8px;*
+  /*text-align: center;*/
 }
 
 .button-container {
   background: #e3f4ff;
   padding: 8px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 8px 24px;
 }
