--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,10 +7,10 @@ body {
   width: 400px;
   padding: 8px;
   background: #fff;
-  /*margin: 8px auto;*/  
 }
 
 .title {
+  margin-top: 0px;
   font-size: 16px;
   background: #e3f4ff;
   padding: 8px;
@@ -19,11 +19,7 @@ body {
 .content {  
   background: #e3f4ff;
   margin: 8px auto;
-  padding: 16px 8px;
-  /*padding-bottom: 16px;
-  padding-right: 8px;
-  padding-left: 8px;*
-  /*text-align: center;*/
+  padding: 16px 8px;  
 }
 
 .button-container {
