--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -2,16 +2,51 @@
 you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
+/*
+### Self Check
+- Everything is centered vertically inside the header.
+- There is 8px space between everything and the edge of the header.
+- Items are arranged horizontally as seen in the outcome image.
+- There is 16px between each item on both sides of the header.
+- flex is used to arrange everything.
+*/
+
 body {
   margin: 0;
+  /*SWM added 8px border*/
+  border: 8px;
   background: #eee;
   font-family: Besley, serif;
+  /*SWM display flex*/
+  /*display: flex;
+  justify-content: space-between;*/
+
 }
 
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  /*SWM */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/*SWM containter for left items*/
+.logo_links {
+  display: flex;
+  padding: 8px;
+  align-items: flex-start;
+}
+
+/*SWM container for right items*/
+.account_notify {
+  display: flex;
+  /*flex-direction: row;
+  padding: 8px;
+  align-items: flex-end;*/
+
 }
 
 .profile-image {
@@ -45,4 +80,7 @@ a {
 
 ul {
   list-style-type: none;
+  /*SWM There is 16px between each item*/
+  display: flex;
+  gap: 16px;
 }
