--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -29,7 +29,8 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   /*SWM */
   display: flex;
-  align-items: center;
+  /*flex-direction: row;
+  align-content: center;*/
   justify-content: space-between;
 }
 
@@ -37,16 +38,17 @@ body {
 .logo_links {
   display: flex;
   padding: 8px;
-  align-items: flex-start;
+  align-content: flex-start;
 }
 
 /*SWM container for right items*/
 .account_notify {
   display: flex;
-  /*flex-direction: row;
-  padding: 8px;
-  align-items: flex-end;*/
-
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+  /*align-content: flex-end;*/
+  gap: 16px;
 }
 
 .profile-image {
